# yasuwo

./: LICENSE.md  README.md  UsedLibraries.md  pyproject.toml  requirements.txt  updatetranslation.py  yasuwo-cli.py  yasuwo.py
CoreModules/: Annotator.py  CommandLineHandler.py  Hotkey.py  ScreenshotArea.py  Screenshoter.py  StartupChecker.py
DataModules/: Backup.py  Configuration.py  Constants.py  DatabaseData.py  DatabaseTables.py  Translation.py
DefaultTemplates/: settingstemplate.toml
GraphicalModules/: AboutWindow.py  AnnotateWindow.py  AreaPickerDialogs.py  ChangeProjectDialog.py  CheckWindow.py  CustomAreaButtonsWindow.py  CustomAreaDialog.py  LibrariesWindow.py  MainWindow.py  ManageProfilesWindow.py  ManageProjectsWindow.py  ProjectGroupDialog.py  ScreenshotViewWindow.py  ScreenshotsWindow.py  SearchWindow.py  SettingsWindow.py
InterfaceLayout/: AboutWindow.ui  AnnotateWindow.ui  ChangeProjectDialog.ui  CheckWindow.ui  CustomAreaButtonsWindow.ui  CustomAreaDialog.ui  LibrariesWindow.ui  MainWindow.ui  ManageProfilesWindow.ui  ManageProjectsWindow.ui  ProjectGroupDialog.ui  ScreenshotViewWindow.ui  ScreenshotsWindow.ui  SearchWindow.ui  SettingsWindow.ui
Languages/: yasuwo-sk.ts
